Quick Fix for Overflow issue. Might have to look into an alternative for it.

--- a/css/main.css
+++ b/css/main.css
@@ -2540,7 +2540,7 @@
 		background: #DB2B39;
 		color: #DB5C66;
 		height: 100%;
-		overflow-y: hidden;
+		overflow-y: auto;
 		position: fixed;
 		text-align: center;
 		top: 0;
@@ -2823,7 +2823,7 @@
 				transition: transform 0.5s ease;
 				display: block;
 				height: 100%;
-				overflow-y: hidden;
+				overflow-y: auto;
 				position: fixed;
 				top: 0;
 				width: 23em;
